@@ -1,3 +1,6 @@
+11 February 2013: Matthijs
+- Improve error logging when xfr fails due to xfrd_parse_rrs().
+
 5 February 2013: Matthijs
 - Fix deadlock when in corner case denial node has no RRset.
 - OPENDNSSEC-389 / SUPPORT-50 / SUPPORT-51
